# Spotify-Music-Downloader-Telegram-Bot

./: .gitignore  README.md  alembic.ini  install.sh  main.py  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 1a5330bc1528_add_joined_date_field_to_user.py  b3734cd2216e_create_music_download_queue_table.py  c51985799614_initial.py
bot/: __init__.py  handlers.py  middlewares.py  session.py  utils.py
core/: settings.py  tasks.py
database/: __init__.py  models.py
spotify/: __init__.py  core.py  downloader.py  engine.py  exceptions.py  utils.py
spotify_music_downloader_telegram_bot/: main.py  settings.py
spotify_music_downloader_telegram_bot/scripts/: decorators.py  functions.py  settings.py  telegram_bot.py
