[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
python-dotenv = "^1.0.1"
aiogram = "^3.17.0"
sqlalchemy = "^2.0.37"
psycopg = "^3.2.4"
spotdl = "^4.2.11"
asyncer = "^0.0.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.3"
mypy = "1.13.0"

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false
disallow_subclassing_any = false
warn_unreachable = true
warn_no_return = true
warn_return_any = false

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
	"F",  # pyflakes
	"E",  # pycodestyle errors
	"W",  # pycodestyle warnings
	"I",  # isort
	"N",  # pep8-naming
	"UP",  # pyupgrade
	"B",  # flake8-bugbear
	"C4",  # flake8-comprehensions
	"T20",  # flake8-print
	"INT",  # flake8-gettext
]
ignore = [
	"E501",  # line too long, handled by black
	"W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
section-order = [
	"future",
	"aiogram",
	"sqlalchemy",
	"third-party",
	"first-party",
	"local-folder",
	"standard-library",
]
from-first = true

[tool.ruff.lint.isort.sections]
aiogram = ["aiogram"]
sqlalchemy = ["sqlalchemy"]

[tool.ruff.format]
quote-style = "single"
